--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "env-cmd -f .env vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@types/react-redux": "^7.1.33",
     "bootstrap": "^5.3.2",
+    "env-cmd": "^10.1.0",
     "firebase": "^10.7.1",
     "hamburger-react": "^2.5.0",
     "localforage": "^1.10.0",
@@ -27,6 +28,7 @@
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
+    "react-toastify": "^10.0.5",
     "sort-by": "^0.0.2",
     "tailwind-merge": "^2.2.0"
   },
