--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "sort-by": "^0.0.2",
     "tailwind-merge": "^2.2.0"
